--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
+html {
+  font-size: 62.5%;
+}
+
 body {
+  font-size: 1.6rem;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+li {
+  list-style: none;
+}
+button {
+  padding: 1rem;
+  font-size: 1.6rem;
+  font-weight: 500;
+  border: 0.1rem solid #c0c0c0;
+  border-radius: 0.3rem;
+  cursor: pointer;
+}
+button:hover {
+  border: 0.1rem solid #808080;
+}
+.btn-primary {
+  background-color: #ff4177;
+  color: #ffffff;
+}
+.app {
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.signIn-area {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.signIn-area li {
+  margin-bottom: 1rem;
+}
+
+/* Form */
+.form-container {
+  display: flex;
+  flex-direction: column;
+  width: 32rem;
+  padding: 2rem;
+  border: 0.1rem solid #c0c0c0;
+  border-radius: 0.3rem;
+}
+.form-container li {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0;
+}
+input {
+  padding: 1rem;
+  border: 0.1rem solid #c0c0c0;
+  border-radius: 0.3rem;
+}
+.err-message {
+  text-align: center;
+  color: red;
+  font-weight: 400;
 }
